# direct3ddemo

./: .gitignore  README.md
CreateDevice/: CreateDevice.cpp
Lights/: CMakeLists.txt
Matrices/: Matrices.cpp
MultiTexture/: CMakeLists.txt  d3dUtility.cpp  d3dUtility.h  ps_multitex.cpp  ps_multitex.txt
RectTexture/: Textures.cpp
Textures/: Textures.cpp
Vertices/: Vertices.cpp
